Prevent truncation of page titles in search results.

--- a/css/google_search.css
+++ b/css/google_search.css
@@ -23,6 +23,11 @@
     display: none;
 }
 
+#cse .gs-result .gs-title {
+    height: auto;
+    overflow: hidden;
+}
+
 #cse .gs-result .gs-title * {
     color: black;
 }
